grammar.js
    source_file: $ => seq(
      repeat($._NL),
      optional($.shebang_line),
      repeat($.file_annotation),
      repeat($._NL),
      optional($.package_header),
      repeat($._NL),
      repeat(seq($.import_header, optional(seq($._semi, repeat($._NL))))),
      // In principle, we either parse a Kotlin file (.kt) or a Kotlin script (.kts).
      // Statements cannot appear as top-level constructs in Kotlin files, only in scripts.
      // However, here, we're allowing parsing of both statements and declarations as top level.
      repeat(choice($._top_level_object, $._top_level_statements))
    ),

    _top_level_object: $ => seq($._declaration, repeat($._semi)),

    _top_level_statements: $ => seq(
      sep1(alias($._top_level_statement, $.statement), repeat1($._semi)),
      repeat($._semi)
    ),

    type_alias: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "typealias",
      alias($.simple_identifier, $.type_identifier),
      optional($.type_parameters),
      repeat($._NL),
      "=",
      repeat($._NL),
      $._type
    )),

    _declaration: $ => choice(
      $.class_declaration,
      alias($.class_declaration_no_body, $.class_declaration),
      $.object_declaration,
      $.function_declaration,
      $.property_declaration,
      $.type_alias
    ),

    // ==========
    // Classes
    // ==========

    binding_pattern_kind: $ => choice("val", "var"),

    type_parameters: $ => seq(
      "<", 
      repeat($._NL),
      sep1($.type_parameter, repeat($._NL), ",", repeat($._NL)), 
      repeat($._NL),
      ">"
    ),

    type_parameter: $ => seq(
      optional($.type_parameter_modifiers),
      repeat($._NL),
      alias($.simple_identifier, $.type_identifier),
      optional(seq(repeat($._NL), ":", repeat($._NL), $._type))
    ),

    function_value_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1($.function_value_parameter, repeat($._NL), ",", repeat($._NL))),
      optional(","),
      repeat($._NL),
      ")"
    ),

    receiver_type: $ => seq(
      optional(field("modifiers", $.type_modifiers)),
      choice(
        $._type_reference,
        $.parenthesized_type,
        $.nullable_type
      )
    ),

    function_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      "fun",
      optional($.type_parameters),
      optional(seq(repeat($._NL), field("receiver_type", $.receiver_type), repeat($._NL), optional("."))),
      field("name", $.simple_identifier),
      field("parameters", $.function_value_parameters),
      optional(seq(repeat($._NL), ":", repeat($._NL), field("type", $._type))),
      optional(seq(repeat($._NL), $.type_constraints)),
      optional(seq(repeat($._NL), field("body", prec.dynamic(100, $.function_body))))
    ),

    function_body: $ => choice(
      $.block, 
      seq("=", repeat($._NL), field("expression", $.expression))
    ),

    variable_declaration: $ => seq(
      repeat($._annotation),
      repeat($._NL),
      field("id", $.simple_identifier),
      optional(field("type", seq(repeat($._NL), ":", repeat($._NL), $._type)))
    ),

    property_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      $.binding_pattern_kind,
      optional(field("type_parameters", $.type_parameters)),
      optional(seq(field("receiver_type", $.receiver_type), ".")),
      field("var_decl", choice($.variable_declaration, $.multi_variable_declaration)),
      optional(field("type_constraints", $.type_constraints)),
      optional(seq(
        repeat($._NL),
        choice(
          seq("=", repeat($._NL), field("initializer", $.expression)),
          $.property_delegate
      ))),
      optional(
        seq(      
          repeat($._NL),
          optional(";"),
          repeat($._NL),
          $._setter_getter
        )
      )
    ),

    _setter_getter: $ => choice(
      seq($.getter, optional(seq(repeat($._NL), $.setter))),
      seq($.setter, optional(seq(repeat($._NL), $.getter)))
    ),

    getter: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "get",
      optional(seq(
        "(",
        repeat($._NL),
        ")",
        optional(seq(":", $._type)),
        $.function_body
      ))
    )),

    setter: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "set",
      optional(seq(
        "(",
        repeat($._NL),
        $.parameter_with_optional_type,
        ")",
        optional(seq(":", $._type)),
        repeat($._NL),
        $.function_body
      ))
    )),

    parameter_with_optional_type: $ => seq(
      optional($.parameter_modifiers),
      $.simple_identifier,
      optional(seq(":", $._type))
    ),

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.function_type,
        $.not_nullable_type
      )
    ),

    // Give type reference a higher precedence to resolve conflict with parenthesized expression
    _type_reference: $ => choice(
      field("type", $.user_type),
      "dynamic"
    ),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1("?")
    ),

    user_type: $ => seq(
      $._simple_user_type, repeat(seq(".", repeat($._NL), $._simple_user_type))
    ),

    _simple_user_type: $ => seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    ),

    type_projection: $ => choice(
      seq(optional($.type_projection_modifiers), $._type),
      "*"
    ),

    function_type: $ => seq(
      optional(seq($.receiver_type, ".", repeat($._NL))), 
      $.function_type_parameters,
      repeat($._NL),
      "->",
      repeat($._NL),
      $._type
    ),

    // A higher-than-default precedence resolves the ambiguity with 'parenthesized_type'
    function_type_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1(choice($.parameter, $._type), repeat($._NL), ",", repeat($._NL))),
      repeat($._NL),
      ")"
    ),

    parenthesized_type: $ => seq("(", repeat($._NL), $._type, ")"),

    _statements: $ => seq($.statements, repeat($._semi)),

    statement: $ => choice(
      $._declaration,
      $.assignment,
      $._loop_statement,
      $.expression
    ),

    block: $ => seq(
      "{",
      repeat($._NL),
      optional($._statements),
      "}"
    ),

    _loop_statement: $ => choice(
      $.for_statement,
      $.while_statement,
      $.do_while_statement
    ),

    dot_qualified_expression: $ => prec(PREC.DOT, seq(
      field("receiver", $.expression),
      repeat($._external_nl),
      choice(".", "?."),
      repeat($._NL),
      field("selector", choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      ))
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field("expression", $.expression), 
      optional($.type_arguments),
      $._call_arguments
    )),

    // It's not possible to resolve the ambiguity between explicit delegation and calls with last lambda argument.
    // For example:
    //   class Derived(b: Base) : Base by b {
    //     override fun printMessage() { print("abc") }
    //   }
    // Here, b {}, can be parsed as both a call expression or a delegation followed by the class body. In this case,
    // we need the second interpreation. But in funciton calls like `with (s) {}`, we want `{}` to be parsed as part
    // of the call. That means that based on the context a call_expression happens in, we either want left or right
    // associativity for the arguments, which is not posssible to specify with tree-sitter. 
    // Creating a separate nonterminal, is the cleanest way to move forward.
    // A simple_call_expression is the one without the trailing lambda argument.
    _call_arguments: $ => prec.right(choice(
      seq(optional(field("args", $.value_arguments)), field("lambda_arg", $.annotated_lambda)),
      field("args", $.value_arguments)
    )),
    
    prefix_expression: $ => prec(PREC.PREFIX, seq(
      field("op", $._prefix_unary_operator), 
      repeat($._NL),
      field("expression", $.expression))
    ),

    conjunction_expression: $ => prec.left(PREC.CONJUNCTION, seq(
      field("left", $.expression), 
      repeat($._external_nl),
      "&&",
      repeat($._NL),
      field("right", $.expression))
    ),

    disjunction_expression: $ => prec.left(PREC.DISJUNCTION, seq(
      field("left", $.expression), 
      repeat($._external_nl),
      "||",
      repeat($._NL),
      field("right", $.expression))
    ),

    // Suffixes

    type_arguments: $ => prec.dynamic(PREC.GENERIC, seq(
      "<", 
      repeat($._NL),
      sep1($.type_projection, repeat($._NL), ",", repeat($._NL)), 
      repeat($._NL),
      ">"
    )),

    value_arguments: $ => seq(
      "(",
      repeat($._NL),
      optional(
        seq(
          sep1($.value_argument, repeat($._NL), ",", repeat($._NL)),
          optional(seq(repeat($._NL), ",")),
          repeat($._NL),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($._annotation),
      repeat($._NL),
      optional(seq($.simple_identifier, repeat($._NL), "=", repeat($._NL))),
      optional("*"),
      repeat($._NL),
      $.expression
    ),

    string_literal: $ => choice(
      $._line_string_literal,
      $._multi_line_string_literal
    ),

    _line_string_literal: $ => seq(
      '"',
      repeat(choice(
        alias($.line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content),
        $._interpolation
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      choice('"', seq(alias("$", $.string_content), '"'))
    ),

    _multi_line_string_literal: $ => prec.right(seq(
      '"""',
      repeat(choice(
        alias($.multi_line_string_content, $.string_content), 
        alias(DOLLAR_IN_STRING_CONTENT, $.string_content), 
        QUOTE_IN_MULTI_LINE_STRING_CONTENT,
        $._interpolation,
      )),
      // Need to consume the last '$' character here, and create a node in the tree
      optional(alias("$", $.string_content)),
      '"""',
      repeat('"')
    )),

    _prefix_unary_operator: $ => choice("++", "--", "-", "+", "!"),

    modifiers: $ => prec.right(repeat1(choice($._annotation, $._modifier))),

    _modifier: $ => seq(choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ), repeat($._NL)),

    type_modifiers: $ => repeat1($._type_modifier),

    _type_modifier: $ => choice($._annotation, "suspend"),

    visibility_modifier: $ => choice(
      "public",
      "private",
      "internal",
      "protected"
    ),

    inheritance_modifier: $ => choice(
      "abstract",
      "final",
      "open"
    ),

    _annotation: $ => seq(
      $.annotation,
      repeat($._NL)
    ),

    annotation: $ => choice($._single_annotation, $._multi_annotation),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    simple_identifier: $ => choice($._lexical_identifier, $._soft_keywords),

    _soft_keywords: $ => choice(
      "by",
      "catch",
      "constructor",
      "delegate",
      "dyanamic",
      "field",
      "file",
      "finally",
      "get",
      "import",
      "init",
      "param",
      "property",
      "receiver",
      "set",
      "setparam",
      "value",
      "where",
      // modifier keywords
      "abstract",
      "actual",
      "annotation",
      "companion",
      "const",
      "crossline",
      "data",
      "enum",
      "expect",
      "data",
      "inner",
      "internal",
      "lateinit",
      "noinline",
      "open",
      "operator",
      "out",
      "override",
      "private",
      "protected",
      "public",
      "reified",
      "sealed",
      "suspend",
      "tailrec",
      "vararg"
    ),

    real_literal: $ => token(choice(
      seq(
        choice(
          seq(DEC_DIGITS, REAL_EXPONENT),
          seq(optional(DEC_DIGITS), ".", DEC_DIGITS, optional(REAL_EXPONENT))
        ),
        optional(/[fF]/)
      ),
      seq(DEC_DIGITS, /[fF]/)
    )),

    integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

    hex_literal: $ => token(seq("0", /[xX]/, HEX_DIGITS)),

    bin_literal: $ => token(seq("0", /[bB]/, BIN_DIGITS)),

    unsigned_literal: $ => seq(
      choice($.integer_literal, $.hex_literal, $.bin_literal),
      /[uU]L?/
    ),

    boolean_literal: $ => choice("true", "false"),

    null_literal: $ => "null",

    // ==========
    // Identifiers
    // ==========

    _lexical_identifier: $ => choice(
      $._alpha_identifier,
      $._backtick_identifier,
    ),

    _NL: $ => token(/\n/),
    _semi: $ => choice(";", $._NL),

    line_comment: $ => token(seq("//", /[^\r\n]*/)),

    // We need to consume all the newlines after the commend, otherwise, the comments
    // may be inserted in unwanted places. Comments (and other extra) nodes are inserted
    // after tokens.
    // multiline_comment: $ => seq(
    //   token("/*"), 
    //   repeat(choice($._NL, /./)), 
    //   token("*/"),
    // )
  }
});

function sep1(rule, ...separator) {
  return seq(rule, repeat(seq(...separator, rule)));
}
