test/corpus/kotlin-spec-tests/function.txt
================================================================================
Function with receivers
================================================================================

fun (@[a] T<T>.(A<B>) -> Unit).foo()
fun (@[a] T<T>.(A<B>) ->  C<D, E>).foo();
fun @[a] (@[a] T<T>.(A<B>) -> R).foo() {}
fun <A, B> @[a] ((A, B) -> Unit).foo()
fun ((T) -> G)?.foo()
fun ((T) -> G)??.foo()
fun <T> f()

--------------------------------------------------------------------------------

(source_file
    (function_declaration
    receiver_type: (receiver_type
        (parenthesized_type
        (type_modifiers
            (annotation
            (user_type
                (type_identifier))))
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            (function_type_parameters
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            type: (user_type
            (type_identifier)))))
    name: (simple_identifier)
    parameters: (function_value_parameters))
    (function_declaration
    receiver_type: (receiver_type
        (parenthesized_type
        (type_modifiers
            (annotation
            (user_type
                (type_identifier))))
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            (function_type_parameters
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            type: (user_type
            (type_identifier)
            (type_arguments
                (type_projection
                type: (user_type
                    (type_identifier)))
                (type_projection
                type: (user_type
                    (type_identifier))))))))
    name: (simple_identifier)
    parameters: (function_value_parameters))
    (function_declaration
    receiver_type: (receiver_type
        modifiers: (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (parenthesized_type
        (type_modifiers
            (annotation
            (user_type
                (type_identifier))))
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            (function_type_parameters
            type: (user_type
                (type_identifier)
                (type_arguments
                (type_projection
                    type: (user_type
                    (type_identifier))))))
            type: (user_type
            (type_identifier)))))
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
        (block)))
    (function_declaration
    (type_parameters
        (type_parameter
        (type_identifier))
        (type_parameter
        (type_identifier)))
    receiver_type: (receiver_type
        modifiers: (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (parenthesized_type
        (function_type
            (function_type_parameters
            type: (user_type
                (type_identifier))
            type: (user_type
                (type_identifier)))
            type: (user_type
            (type_identifier)))))
    name: (simple_identifier)
    parameters: (function_value_parameters))
    (function_declaration
    receiver_type: (receiver_type
        (nullable_type
        (parenthesized_type
            (function_type
            (function_type_parameters
                type: (user_type
                (type_identifier)))
            type: (user_type
                (type_identifier))))))
    name: (simple_identifier)
    parameters: (function_value_parameters))
    (function_declaration
    receiver_type: (receiver_type
        (nullable_type
        (parenthesized_type
            (function_type
            (function_type_parameters
                type: (user_type
                (type_identifier)))
            type: (user_type
                (type_identifier))))))
    name: (simple_identifier)
    parameters: (function_value_parameters))
    (function_declaration
    (type_parameters
        (type_parameter
        (type_identifier)))
    name: (simple_identifier)
    parameters: (function_value_parameters)))

================================================================================
Type aliases
================================================================================

typealias f = (((S).() -> S).() -> S)
typealias f = ((T.() -> S).() -> S)
typealias f = ((T.T.() -> S).() -> S)
typealias f = ((T<A, B>.T<x>.() -> S).() -> S)
typealias f = (((S).() -> S).() -> S)

typealias f =  @[a] (@[a] ((S).() -> S).() -> S)
typealias f = @[a] (@[a] (T.() -> S).() -> S)
typealias f = @[a] (@[a] (T<A, B>.() -> S).() -> S)
typealias f = @[a] (@[a] ((S).() -> S).() -> S)

--------------------------------------------------------------------------------

(source_file
    (type_alias
    (type_identifier)
    (parenthesized_type
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                (parenthesized_type
                    type: (user_type
                    (type_identifier))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (parenthesized_type
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                type: (user_type
                    (type_identifier)))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (parenthesized_type
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                type: (user_type
                    (type_identifier)
                    (type_identifier)))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (parenthesized_type
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                type: (user_type
                    (type_identifier)
                    (type_arguments
                    (type_projection
                        type: (user_type
                        (type_identifier)))
                    (type_projection
                        type: (user_type
                        (type_identifier))))
                    (type_identifier)
                    (type_arguments
                    (type_projection
                        type: (user_type
                        (type_identifier))))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (parenthesized_type
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                (parenthesized_type
                    type: (user_type
                    (type_identifier))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (type_modifiers
        (annotation
        (user_type
            (type_identifier))))
    (parenthesized_type
        (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                (parenthesized_type
                    type: (user_type
                    (type_identifier))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (type_modifiers
        (annotation
        (user_type
            (type_identifier))))
    (parenthesized_type
        (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                type: (user_type
                    (type_identifier)))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (type_modifiers
        (annotation
        (user_type
            (type_identifier))))
    (parenthesized_type
        (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                type: (user_type
                    (type_identifier)
                    (type_arguments
                    (type_projection
                        type: (user_type
                        (type_identifier)))
                    (type_projection
                        type: (user_type
                        (type_identifier))))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier)))))
    (type_alias
    (type_identifier)
    (type_modifiers
        (annotation
        (user_type
            (type_identifier))))
    (parenthesized_type
        (type_modifiers
        (annotation
            (user_type
            (type_identifier))))
        (function_type
        (receiver_type
            (parenthesized_type
            (function_type
                (receiver_type
                (parenthesized_type
                    type: (user_type
                    (type_identifier))))
                (function_type_parameters)
                type: (user_type
                (type_identifier)))))
        (function_type_parameters)
        type: (user_type
            (type_identifier))))))

================================================================================
Properties with function receivers
================================================================================

val ((Unit) -> Unit).foo
val (foo.bar.() -> Unit).foo

val (foo.bar.() -> Unit).foo = foo
   get() {}
   set(it) {}

val (foo.bar.() -> Unit).foo = foo
   get() : Foo {}
   set(it) {}


val (foo.bar.() -> Unit).foo : bar = foo
   @[a] public get() {}
   open set(a : b) {}


val (foo.bar.() -> Unit).foo : bar = foo
   open set(a : b) {}


val (foo.bar.() -> Unit).foo : bar = foo
   @[a] public get() {}

--------------------------------------------------------------------------------

(source_file
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (function_type_parameters
            type: (user_type
                (type_identifier)))
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier)))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier)))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier))
    initializer: (simple_identifier)
    (getter
        (function_body
        (block)))
    (setter
        (parameter_with_optional_type
        (simple_identifier))
        (function_body
        (block))))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier))
    initializer: (simple_identifier)
    (getter
        type: (user_type
        (type_identifier))
        (function_body
        (block)))
    (setter
        (parameter_with_optional_type
        (simple_identifier))
        (function_body
        (block))))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier)
        type: (user_type
        (type_identifier)))
    initializer: (simple_identifier)
    (getter
        modifiers: (modifiers
        (annotation
            (user_type
            (type_identifier)))
        (visibility_modifier))
        (function_body
        (block)))
    (setter
        modifiers: (modifiers
        (inheritance_modifier))
        (parameter_with_optional_type
        (simple_identifier)
        type: (user_type
            (type_identifier)))
        (function_body
        (block))))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier)
        type: (user_type
        (type_identifier)))
    initializer: (simple_identifier)
    (setter
        modifiers: (modifiers
        (inheritance_modifier))
        (parameter_with_optional_type
        (simple_identifier)
        type: (user_type
            (type_identifier)))
        (function_body
        (block))))
    (property_declaration
    binding_pattern: (binding_pattern_kind)
    receiver_type: (receiver_type
        (parenthesized_type
        (function_type
            (receiver_type
            type: (user_type
                (type_identifier)
                (type_identifier)))
            (function_type_parameters)
            type: (user_type
            (type_identifier)))))
    var_decl: (variable_declaration
        id: (simple_identifier)
        type: (user_type
        (type_identifier)))
    initializer: (simple_identifier)
    (getter
        modifiers: (modifiers
        (annotation
            (user_type
            (type_identifier)))
        (visibility_modifier))
        (function_body
        (block)))))
