test/corpus/operators.txt
================================================================================
&& on separate line
================================================================================

a 
&&
b

--------------------------------------------------------------------------------

(source_file
  (statement
    (conjunction_expression
      left: (simple_identifier)
      right: (simple_identifier))))

================================================================================
&& on separate line with comments
================================================================================

a
// comment

&&
b

--------------------------------------------------------------------------------

(source_file
  (statement
    (conjunction_expression
      left: (simple_identifier)
      (line_comment)
      right: (simple_identifier))))

================================================================================
|| on separate line
================================================================================

a 
||
b

--------------------------------------------------------------------------------

(source_file
    (statement
        (disjunction_expression
            left: (simple_identifier)
            right: (simple_identifier))))


================================================================================
. on separate line with multiline comment
================================================================================

a
// comment
/* aaaa */
// comment
. b

--------------------------------------------------------------------------------

(source_file
  (statement
    (dot_qualified_expression
      receiver: (simple_identifier)
      (line_comment)
      (multiline_comment)
      (line_comment)
      selector: (simple_identifier))))
